version/0.14/_sources/api/solver/_autosummary/settings/eutectic_mf.rst.txt
:orphan:

.. _eutectic_mf:

eutectic_mf
===========

.. autoclass:: ansys.fluent.core.solver.settings_231.eutectic_mf.eutectic_mf

.. rubric:: Attributes

========================   ====================================================

Attribute                                                               Summary

========================   ====================================================
:ref:`option <option_9>`       Select method for calculating material property.

:ref:`value <value>`                                             'value' child.

========================   ====================================================

.. rubric:: Included in:

================================   =================================

Parent                                                       Summary

================================   =================================
:ref:`fluid_child <fluid_child>`       'child_object_type' of fluid.

================================   =================================

